# RustOS

./: Cargo.toml  README.md  build  build.rs  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
kernel/: Cargo.toml
kernel/src/: acpi.rs  allocator.rs  apic.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  macros.rs  main.rs  memory.rs  print.rs  serial.rs
kernel/src/allocator/: bump.rs  linked_list.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
