[package]
name = "rust_os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust_os"
test = true
bench = false

[dependencies]
bootloader={ version = "0.9", features = ["map_physical_memory"]}
volatile = "0.3"
spin = "0.10.0"
x86_64 = "0.15.4"
uart_16550 = "0.4.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.9.0"

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio"
]
test-success-exit-code = 33
test-timeout = 300