[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.12"
volatile = "0.3"
spin = "0.10.0"
x86_64 = "0.15.4"
uart_16550 = "0.4.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
acpi = "5"

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
default-features = false
features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]