[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11"
spin = "0.12.0"
x86_64 = "0.15.4"
uart_16550 = "0.6.0"
pic8259 = "0.11.0"
pc-keyboard = "0.9.0"
acpi = "6"
x2apic = "0.5"

[dependencies.noto-sans-mono-bitmap]
version = "0.3.2"
default-features = false
features = [
    "light",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]